# pg-extend-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
.cargo/: config
.github/: dependabot.yml
.github/workflows/: test.yml
examples/add_one/: Cargo.toml  README.md  add_one.rs
examples/add_one/src/: bin.rs  lib.rs
examples/adding/: Cargo.toml  README.md
examples/adding/src/: bin.rs  lib.rs
examples/fdw/: Cargo.toml
examples/fdw-rw/: Cargo.toml
examples/fdw-rw/src/: lib.rs
examples/fdw/src/: bin.rs  lib.rs
examples/fdw/tests/: fdw.rs
examples/logging/: Cargo.toml  README.md
examples/logging/src/: bin.rs  lib.rs
examples/memory_context/: Cargo.toml
examples/memory_context/src/: bin.rs  lib.rs
examples/nullable/: Cargo.toml  README.md
examples/nullable/src/: bin.rs  lib.rs
examples/panicking/: Cargo.toml  README.md
examples/panicking/src/: bin.rs  lib.rs
examples/quote_ident/: Cargo.toml
examples/quote_ident/src/: bin.rs  lib.rs
examples/strings/: Cargo.toml  README.md
examples/strings/src/: bin.rs  lib.rs
examples/threads/src/: bin.rs  lib.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/core/ops/drop/: trait.Drop.js
implementors/pg_extend/pg_datum/: trait.TryFromPgDatum.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
integration-tests/: Cargo.toml  Makefile.toml  postgresql.conf
integration-tests/src/: lib.rs
integration-tests/tests/: adding_tests.rs  fdw.rs  logging.rs  memory_context.rs  nullable_tests.rs  panicking_tests.rs  quote_ident.rs  strings.rs
pg-extend/: Cargo.toml  Makefile.toml  build.rs  pg_majorversion.h  wrapper.h
pg-extend/src/: lib.rs  log.rs  pg_alloc.rs  pg_bool.rs  pg_datum.rs  pg_error.rs  pg_fdw.rs  pg_sys.rs  pg_type.rs
pg-extend/src/native/: bytea.rs  mod.rs  text.rs  varlena.rs
pg-extension-sys/: Cargo.toml  build.rs  wrapper.h
pg-extension-sys/src/: lib.rs  pg_bool.rs  pg_datum.rs  pg_error.rs  pg_sys.rs
pg-extern-attr/: Cargo.toml  Makefile.toml  README.md
pg-extern-attr/src/: lib.rs  lifetime.rs
pg_extend/: all.html  fn.get_args.html  fn.register_panic_handler.html  index.html  macro.debug.html  macro.error.html  macro.fatal!.html  macro.fatal.html  macro.info.html  macro.log.html  macro.notice!.html  macro.notice.html  macro.pg_create_stmt_bin!.html  macro.pg_create_stmt_bin.html  macro.pg_log!.html  macro.pg_log.html  macro.pg_magic!.html  macro.pg_magic.html  macro.pgbool!.html  macro.pgbool.html  macro.trace.html  macro.warn.html  sidebar-items.js
pg_extend/log/: enum.Level.html  index.html  sidebar-items.js
pg_extend/native/: index.html  sidebar-items.js  struct.Text.html
pg_extend/native/text/: struct.Text.html
pg_extend/pg_alloc/: index.html  sidebar-items.js  struct.PgAllocated.html  struct.PgAllocator.html  trait.RawPtr.html
pg_extend/pg_bool/: index.html  sidebar-items.js  struct.Bool.html
pg_extend/pg_datum/: index.html  sidebar-items.js  struct.PgDatum.html  trait.TryFromPgDatum.html
pg_extend/pg_error/: enum.Level.html  fn.log.html  index.html  sidebar-items.js
pg_extend/pg_sys/: constant.ACLITEMARRAYOID.html  constant.ACLITEMOID.html  constant.ACL_ALL_RIGHTS_COLUMN.html  constant.ACL_ALL_RIGHTS_DATABASE.html  constant.ACL_ALL_RIGHTS_FDW.html  constant.ACL_ALL_RIGHTS_FOREIGN_SERVER.html  constant.ACL_ALL_RIGHTS_FUNCTION.html  constant.ACL_ALL_RIGHTS_LANGUAGE.html  constant.ACL_ALL_RIGHTS_LARGEOBJECT.html  constant.ACL_ALL_RIGHTS_RELATION.html  constant.ACL_ALL_RIGHTS_SCHEMA.html  constant.ACL_ALL_RIGHTS_SEQUENCE.html  constant.ACL_ALL_RIGHTS_STR.html  constant.ACL_ALL_RIGHTS_TABLESPACE.html  constant.ACL_ALL_RIGHTS_TYPE.html  constant.ACL_CONNECT.html  constant.ACL_CONNECT_CHR.html  constant.ACL_CREATE.html  constant.ACL_CREATE_CHR.html  constant.ACL_CREATE_TEMP.html  constant.ACL_CREATE_TEMP_CHR.html  constant.ACL_DELETE.html  constant.ACL_DELETE_CHR.html  constant.ACL_EXECUTE.html  constant.ACL_EXECUTE_CHR.html  constant.ACL_ID_PUBLIC.html  constant.ACL_INSERT.html  constant.ACL_INSERT_CHR.html  constant.ACL_MODECHG_ADD.html  constant.ACL_MODECHG_DEL.html  constant.ACL_MODECHG_EQL.html  constant.ACL_NO_RIGHTS.html  constant.ACL_REFERENCES.html  constant.ACL_REFERENCES_CHR.html  constant.ACL_SELECT.html  constant.ACL_SELECT_CHR.html  constant.ACL_SELECT_FOR_UPDATE.html  constant.ACL_TRIGGER.html  constant.ACL_TRIGGER_CHR.html  constant.ACL_TRUNCATE.html  (+9996 more)
pg_extend/pg_type/: enum.PgType.html  index.html  sidebar-items.js  trait.PgTypeInfo.html
pg_extern_attr/: all.html  attr.pg_extern.html  attr.pg_foreignwrapper.html  index.html  sidebar-items.js
scripts/: install_postgres.sh
src/: lib.rs
src/pg_extend/: lib.rs.html  log.rs.html  pg_alloc.rs.html  pg_bool.rs.html  pg_datum.rs.html  pg_error.rs.html  pg_sys.rs.html  pg_type.rs.html
src/pg_extend/native/: mod.rs.html  text.rs.html  varlena.rs.html
src/pg_extern_attr/: lib.rs.html  lifetime.rs.html
