[profile.release]
debug = true

[workspace]
members = [
    "pg-extend", 
    "pg-extern-attr", 
    "examples/adding", 
    "examples/fdw",
    "examples/fdw-rw",
    "examples/logging",
    "examples/memory_context",
    "examples/nullable",
    "examples/panicking",
    "examples/strings",
    "integration-tests",
]
