[package]
name = "integration-tests"
version = "0.0.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

description = """
Integration tests for pg-extend
"""

documentation = "https://docs.rs/pg-extend"
repository = "https://github.com/bluejekyll/pg-extend-rs"

readme = "README.md"
license = "MIT/Apache-2.0"

[features]
default = []

fdw = []

[dependencies]
cargo = "0.60"
postgres = "0.17"
tempfile = "3.1"