[package]
name = "pg-extend"
version = "0.2.1"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

description = """
A library for extending Postgres with Rust.
"""

documentation = "https://docs.rs/pg-extend"
repository = "https://github.com/bluejekyll/pg-extend"

readme = "../README.md"
license = "MIT/Apache-2.0"

build = "build.rs"
#rustc-flags = "-C link-arg=undefineddynamic_lookup"

[features]
default = ["postgres-10"]
postgres-9 = []
postgres-10 = []
postgres-11 = []

[dependencies]

[build-dependencies]
bindgen = "0.47"
clang = "0.21"
