[package]
name = "pg-extend"
version = "0.2.1"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

description = """
A library for extending Postgres with Rust.
"""

documentation = "https://docs.rs/pg-extend"
repository = "https://github.com/bluejekyll/pg-extend"

readme = "../README.md"
license = "MIT/Apache-2.0"

build = "build.rs"

[features]
default = []

# Enable Foreign Data wrappers support
fdw = []
# We use feature flags to dictate which sets of PG features we support.
#   The build.rs script will set a feature flag rustc, but this does not enable the dependencies.
#   For that, build scripts that want to explcitly enable supported features in each
#   version, should pass the feature flag explicity.
# Each of these should list all features supported by that version of PG.
postgres-9 = ["fdw"]
postgres-10 = ["fdw"]
postgres-11 = ["fdw"]
postgres-12 = []

[dependencies]
cfg-if = "0.1.10"

[build-dependencies]
bindgen = "0.53"
clang = "0.23"
