[package]
name = "pg-extern-attr"
version = "0.1.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

description = """
A attribute proc-macro for deriving postgres extension function information, akin to PG_FUNCTION_INFO_V1 in Postgres
"""

documentation = "https://docs.rs/pg-extern-macro"
repository = "https://github.com/bluejekyll/pg-extern-macro"

readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["full", "fold", "parsing"] }
quote = "0.6"
proc-macro2 = "0.4"
