[package]
name = "pg-extern-attr"
version = "0.2.2"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

description = """
A attribute proc-macro for deriving Postgres extension function information, akin to PG_FUNCTION_INFO_V1 in Postgres
"""

documentation = "https://docs.rs/pg-extern-attr"
repository = "https://github.com/bluejekyll/pg-extend-rs"

readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.24", features = ["extra-traits", "full", "fold", "parsing"] }
quote = "1.0.2"
proc-macro2 = "1.0.8"

[dev-dependencies]
pg-extend = { path = "../pg-extend" }