[package]
name = "fdw-rw"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

[features]
default = []

fdw = []
postgres-9 = []
postgres-10 = []
postgres-11 = []
postgres-12 = []

[lib]
crate-type = ["cdylib"]

[dependencies]
pg-extern-attr = { version = "*", path = "../../pg-extern-attr" }
pg-extend = { version = "*", path = "../../pg-extend", features = ["fdw"] }
