[package]
name = "fdw"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

[features]
pg_allocator = []

[lib]
crate-type = ["cdylib"]

[dependencies]
pg-extern-attr = { version = "*", path = "../../pg-extern-attr" }
pg-extend = { version = "*", path = "../../pg-extend" }

[dev-dependencies]
cargo = "0.33"
users = "0.8.1"
postgres = "0.15"
tempfile = "3.0"
