[package]
name = "fdw"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "fdw-stmt"
path = "src/bin.rs"

[dependencies]
pg-extern-attr = { version = "*", path = "../../pg-extern-attr" }
pg-extend = { version = "*", path = "../../pg-extend", features = ["fdw"] }
