[package]
name = "nullable"
version = "0.1.0"
authors = ["Marti Raudsepp <marti@juffo.org"]
edition = "2018"

[features]
default = []

fdw = []
postgres-9 = []
postgres-10 = []
postgres-11 = []
postgres-12 = []

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "nullable-stmt"
path = "src/bin.rs"

[dependencies]
pg-extern-attr = { version = "*", path = "../../pg-extern-attr" }
pg-extend = { version = "*", path = "../../pg-extend" }
